# flaskr

./: .gitignore  docker-compose.yml  fabfile.py
server/: Dockerfile  __init__.py  application.py  auth.py  blog.py  conftest.py  db.py  pyproject.toml  pytest.ini  urls.py  views.py
server/auth/: __init__.py  decorators.py  forms.py  models.py  views.py
server/blog/: __init__.py  forms.py  models.py  views.py
server/blog/templates/: update.html
server/blog/tests/: conftest.py  test_post_list.py
server/migrations/versions/: d73322b422dd_.py
server/server/: __init__.py  db.py  views.py
server/templates/: fields.html  master.html
server/templates/auth/: login.html  register.html
server/templates/blog/: create.html  index.html  retrieve.html  update.html
server/tests/: conftest.py
