[tool.poetry]
name = "flaskr"
version = "0.1.0"
description = ""
authors = ["Anton Petrov <marblemonolit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
click = "^7.1.2"
Werkzeug = "^1.0.1"
Flask-WTF = "^0.14.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = "^5.3"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
